# brale-cli

./: .gitignore  README.md  automation_client.py  automation_status.py  get_token.sh  pyproject.toml  transfer_client.py  transfer_status.py
brale/: __init__.py  auth.py  cli.py  config.py
